--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,7 +24,7 @@ jobs:
           username: ${{ secrets.SSH_USERNAME }}
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           port: ${{ secrets.SSH_PORT || 22 }}
-          source: "docker-compose.yaml,init/*,README.md,CLAUDE.md,.env.example"
+          source: "docker-compose.yaml,init/*,.env.example"
           target: ${{ secrets.DEPLOY_PATH }}
           strip_components: 0
           overwrite: true
