--- a/sqitch.conf
+++ b/sqitch.conf
@@ -3,4 +3,4 @@
 	# plan_file = sqitch.plan
 	# top_dir = .
 [engine "pg"]
-	target = db:pg://joplin@localhost:25432/joplin
+	# target is set dynamically via sqitch.sh wrapper
